--- a/src/css/partials/blocks.scss
+++ b/src/css/partials/blocks.scss
@@ -87,7 +87,7 @@ a.ctaBtn.product-cta {
 
 .ctaBtn.ctaBtn--white-outline:hover {
   background: $white;
-  color: $teal !important;
+  color: $tarmac !important;
   border-color: $white !important;
 }
 
@@ -510,6 +510,8 @@ a.ctaBtn.product-cta {
   .ctaBtn--white.product-cta {
     color: $tarmac !important;
   }
+
+  
 }
 
 .callout-box-eyebrow {
